[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "insider_threat_behavior_analytics"
version = "0.1.0"
description = "Model user behavior to detect abnormal access and data movement."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
